ctm-sf-homeloan-app/main/default/objects/LoanCost__c/LoanCost__c.object-meta.xml
<CustomObject>
    <label>Loan Cost</label>
    <nameField>
        <label>Loan Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>