ctm-sf-homeloan-app/main/default/objects/LoanCost__c/fields/isConsolidated__c.field-meta.xml
<CustomField>
    <fullName>isConsolidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Consolidated</label>
    <type>Checkbox</type>
</CustomField>