ctm-sf-homeloan-app/main/default/objects/LoanCost__c/fields/isDirty__c.field-meta.xml
<CustomField>
    <fullName>isDirty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate when this records data is not in sync with the Web Application</description>
    <inlineHelpText>Flag to indicate when this records data is not in sync with the Web Application</inlineHelpText>
    <label>isDirty</label>
    <type>Checkbox</type>
</CustomField>