ctm-sf-homeloan-app/main/default/objects/LoanCost__c/fields/SyncResponse__c.field-meta.xml
<CustomField>
    <fullName>SyncResponse__c</fullName>
    <description>Response from request to sync updates from this record with the Web Application</description>
    <inlineHelpText>Response from request to sync updates from this record with the Web Application</inlineHelpText>
    <label>Sync Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>